Added links to footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <body>
     <h1>Welcome to the Vanilla Weather App!</h1>
 
-    <footer>Built by Alex Lee</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/AlexandraEL9" target="_blank"> Alex Lee</a>And
+      is hosted
+      <a href="https://github.com/AlexandraEL9/vanilla-weather" target="_blank">
+        on Github</a
+      >
+      and website hosted
+      <a href="https://vanilla-weather-app-al.netlify.app/" target="_blank"
+        >on netlify</a
+      >
+    </footer>
   </body>
 </html>
