--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="weather-app-temperature" id="temperature"></div>
             <div class="weatehr-app-unit">°C</div>
           </div>
-          <hr />
+        </div>
            <div class="weather-forecast">
           <div class="weather-forecast-day">
             <div class="weather-forecast-date">Tue</div>
